mongo-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-mongo-ingress
spec:
  ingressClassName: nginx
  tls:
  -hosts:
    - dashboard-express.com
      secretName: myapp-secret-tls
  rules:
  - host: dashboard-express.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: mongo-express
            port:
              number: 8081
  - host: dashboard-express.com
    http:
      paths:
      - pathType: Prefix
        path: /about
        backend:
          service:
            name: mongo-express
            port:
              number: 8081
      - pathType: Prefix
        path: /home
        backend:
          service:
            name: mongo-express
            port:
              number: 8081
